--- a/.env
+++ b/.env
@@ -25,7 +25,8 @@ APP_SECRET=c7830bb600965400e83a9cef58c4864a
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://root:root@localhost:3306/credits"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
